Removed log4j and topcoder loggers
The code base was using (at least) three distinct logging tools before
this commit.  As discussed in #16 we're going to just use the built in
logging for now, since none of the features provided by log4j are
compelling enough to warrant a logging dependency in this project.

Some of the Top coder logging code used log/Log instead of
logger/Logger -- in addition to changing the log implementations I
also attempted to make the variable / method names consistant to use
Logger.

--- a/psm-app/build.gradle
+++ b/psm-app/build.gradle
@@ -40,7 +40,6 @@ ext.libs = [
        exclude group: 'org.hibernate'
        exclude group: 'org.hibernate.javax.persistence'
     },
-    log4j: 'log4j:log4j:1.2.16',
     spring_beans: "org.springframework:spring-beans:${spring_core_version}",
     spring_context: "org.springframework:spring-context:${spring_core_version}",
     spring_jdbc: "org.springframework:spring-jdbc:${spring_core_version}",
@@ -63,7 +62,7 @@ List runtime_libs = [
     'org.codehaus.jackson:jackson-mapper-asl:1.9.13',
     'org.codehaus.janino:janino:2.5.15',
     'org.slf4j:slf4j-api:1.6.4',
-    'org.slf4j:slf4j-log4j12:1.6.4',
+    'org.slf4j:slf4j-jdk14:1.6.4',
 ]
 
 allprojects {
@@ -165,7 +164,6 @@ project(':cms-web') {
     dependencies {
         providedCompile project(':services')
         providedCompile fileTree(dir: 'WebContent/WEB-INF/lib')
-        compile libs.log4j
         compile libs.spring_beans
         compile libs.spring_ldap
         compile libs.spring_security_acl
@@ -247,7 +245,6 @@ project(':cms-portal-services') {
         earlib libs.jasypt
         earlib libs.jbpm_human_task_core
         earlib libs.jbpm_persistence_jpa
-        earlib libs.log4j
         earlib libs.spring_beans
         earlib libs.spring_context
         earlib libs.spring_jdbc
@@ -284,6 +281,7 @@ project(':integration-tests') {
         testCompile 'net.serenity-bdd:serenity-cucumber:1.1.35'
         testCompile 'junit:junit:4.12'
         testCompile 'org.assertj:assertj-core:3.8.0'
+        testCompile runtime_libs
     }
 
     sourceSets {
